Fix quote text on mobile

--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,7 @@ section {
         max-width: 300px;
     }
 
-    .quote {
-        font-size: 16px;
+    .quote-title {
+        font-size: 15px;
     }
 }
